--- a/Part1_Clean_Data.ipynb
+++ b/Part1_Clean_Data.ipynb
@@ -17722,6 +17722,16 @@
       "metadata": {
         "id": "vykNHIaqLKaH"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Present\n",
+        "https://www.canva.com/design/DAFRb315DcA/odGXUkb6g1iuzvUAnwi-uQ/edit?utm_content=DAFRb315DcA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+      ],
+      "metadata": {
+        "id": "Af2M8Z6l7LlF"
+      }
     }
   ]
 }
